# MindIE-SD

./: AGENTS.md  CODE_OF_CONDUCT.md  OWNERS  README.en.md  README.md  SECURITY.md  contributing.md  pyproject.toml  requirements.txt  setup.py  version.py
.gitcode/: PULL_REQUEST_TEMPLATE.md
csrc/: CMakeLists.txt
csrc/ops/ascendc/framework/onnx_plugin/: ascend_laser_attention_plugin.cpp
csrc/ops/ascendc/op_host/: ascend_la_preprocess.cpp  ascend_laser_attention.cpp  ascend_laser_attention_tiling.h  block_sparse_attention.cpp  block_sparse_attention_tiling.cpp  block_sparse_attention_tiling.h  la_preprocess_tiling.h  sparse_block_estimate.cpp  sparse_block_estimate_tiling.h
csrc/ops/ascendc/op_kernel/: CubeForward.h  VectorForward.h  ascend_laser_attention.cpp  block_sparse_attention_s1s2_bns1_x910.h  block_sparse_attention_s1s2_bns1_x910_base.h  la_preprocess.cpp  la_preprocess.h  ppmatmul_const.h  sparse_block_estimate.cpp  sparse_block_estimate.h
csrc/ops/tik/framework/onnx_plugin/: flash_attention_tik_plugin.cpp
csrc/ops/tik/op_proto/: flash_attention_tik.cpp  flash_attention_tik.h
csrc/ops/tik/tbe/impl/: constants.py  flash_attention_fwd.py  flash_attention_tik.py  tik_ops_utils.py
csrc/ops/tik/tbe/op_info_cfg/ai_core/ascend310p/: flash_attention_tik.ini
csrc/plugin/: adalayernorm.cpp  adalayernorm.h  batchmatmulv2.cpp  batchmatmulv2.h  batchmatmulv3.cpp  batchmatmulv3.h  batchmatmulv3duo.cpp  batchmatmulv3duo.h  block_sparse_attention.cpp  block_sparse_attention.h  find_op_path.cpp  find_op_path.h  la.cpp  la.h  la_preprocess.cpp  la_preprocess.h  layernorm.cpp  layernorm.h  matmulv2.cpp  matmulv2.h  pytorch_npu_helper.h  rainfusionattention.cpp  rainfusionattention.h  register_ops.cpp  rope.cpp  rope.h  sparse_block_estimate.cpp  sparse_block_estimate.h
docker/: README.md
docs/: architecture.md  architecture_introduction.md  developer_guide.md  index.md  security.md  开发者指南.md  架构介绍.md  环境配置.md
docs/en/: README.md  architecture.md  environment_variable_configuration.md  installing_guide.md  menu_user_manual.md  quick_start.md
docs/examples/: AttentionCache加速特性使用样例.md  DiTCache加速特性使用样例.md
docs/features/: graphics_memory_optimization.md  kv_cache_offloading.md  lightweight_algorithm.md  sparse_quantization.md  supported_matrix.md  以存代算.md  多卡并行.md  显存优化.md  调优指南.md
docs/zh/: index.md  installing_guide.md  menu_user_manual.md  quick_start.md
examples/cache/: README.md  cache.py
extensions/: README.md
mindiesd/: __init__.py  config_utils.py  env.py  offload.py  share_memory.py
tests/: .coveragerc  README.md  device.py  generate_json.py  inference_opensora12.py  patchconv3dtest.py  run.py  run_UT_test.sh  run_test.sh  test_config_utils.py  test_file_utils.py  test_offload.py  test_share_memory.py  test_vae.py  ulysses_attention_test.py
(+168 files in other folders)
